# parallelizationstudy

./: CMakeLists.txt  README.md  automate.sh  opticalflow.cpp
BMM/: CMakeLists.txt  MatrixMultiplication.cpp  automate.sh  mat.c
BMM/base/: MatrixMultiplication.c
BMM/cuda/: MatrixMultiplication.cu
BMM/oacc/: MatrixMultiplication.c
BMM/ocl/: CMakeLists.txt  MatMul.cl  MatrixMultiplication.cpp
BMM/omp/: MatrixMultiplication.c
DCT/: CMakeLists.txt  DCT.cpp
DCT/base/: DCT.cpp  DCT.h
DCT/cuda/: DCT.cu  DCT.h
DCT/oacc/: DCT.c  DCT.h
DCT/ocl/: CMakeLists.txt  DCT.cpp
DCT/ocl/cmake/: FindOpenCL.cmake
DCT/omp/: DCT.cpp
Executables/: DCT.cl  bmm_cuda  bmm_multicore  bmm_oacc  bmm_ocl  bmm_singlecore  dct_cuda  dct_multicore  dct_oacc  dct_ocl  dct_singlecore  kmeans_cuda  kmeans_multicore  kmeans_oacc  kmeans_ocl  kmeans_singlecore
OpticalFlow/: automate.sh
kmeans/base/: base_kmeans.cpp
kmeans/cuda/: kmeans_cuda.cu
kmeans/oacc/: oacc_kmeans.cpp
kmeans/ocl/: CMakeLists.txt  CMakeLists.txt~  kmeans.cl  ocl_kmeans.cpp
kmeans/omp/: omp_kmeans.cpp
tests/: CMakeLists.txt  opticalflow_pll.cpp  opticalflow_srl.cpp  timing.sh
