CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(BMM)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

SET(ADDITIONAL_FLAGS    "-std=gnu++0x")
add_definitions(${ADDITIONAL_FLAGS})

FIND_PACKAGE(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIR})

ADD_EXECUTABLE(bmm_ocl MatrixMultiplication.cpp)
TARGET_LINK_LIBRARIES(bmm_ocl ${OPENCL_LIBRARY})
