CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(DCT)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

SET(ADDITIONAL_FLAGS    "-std=gnu++0x")
add_definitions(${ADDITIONAL_FLAGS})

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

FIND_PACKAGE(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIR})

ADD_EXECUTABLE(dct_ocl DCT.cpp)
TARGET_LINK_LIBRARIES(dct_ocl ${OPENCL_LIBRARY})
